Agrego seccion con contrato Escrow (ejemplo de contrato en Marlowe)

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -112,6 +112,17 @@
   year       = {2008}
 }
 
+@article{composing-contracts,
+  author    = {Peyton Jones, Simon and Eber, Jean-Marc and Seward, Julian},
+  journal   = {ACM SIGPLAN Notices},
+  number    = {9},
+  pages     = {280--292},
+  publisher = {ACM New York, NY, USA},
+  title     = {Composing contracts: an adventure in financial engineering (functional pearl)},
+  volume    = {35},
+  year      = {2000}
+}
+
 @book{concrete_semantics,
   abstract  = {Part I of this book is a practical introduction to working with the Isabelle proof assistant. It teaches you how to write functional programs and inductive definitions and how to prove properties about them in Isabelles structured proof language. Part II is an introduction to the semantics of imperative languages with an emphasis on applications like compilers and program analysers. The distinguishing feature is that all the mathematics has been formalised in Isabelle and much of it is executable. Part I focusses on the details of proofs in Isabelle; Part II can be read even without familiarity with Isabelles proof language, all proofs are described in detail but informally. The book teaches the reader the art of precise logical reasoning and the practical use of a proof assistant as a surgical tool for formal proofs about computer science artefacts. In this sense it represents a formal approach to computer science, not just semantics. The Isabelle formalisation, including the proofs and accompanying slides, are freely available online, and the book is suitable for graduate students, advanced undergraduate students, and researchers in theoretical computer science and logic.},
   author    = {Nipkow, Tobias and Klein, Gerwin},
@@ -229,6 +240,17 @@
   year     = {2011}
 }
 
+@article{multi-party-contracts,
+  author    = {Bahr, Patrick and Berthold, Jost and Elsman, Martin},
+  journal   = {ACM SIGPLAN Notices},
+  number    = {9},
+  pages     = {315--327},
+  publisher = {ACM New York, NY, USA},
+  title     = {Certified symbolic management of financial multi-party contracts},
+  volume    = {50},
+  year      = {2015}
+}
+
 @misc{nakamoto2008bitcoin,
   author = {Satoshi Nakamoto},
   month  = {Dec},
@@ -323,6 +345,7 @@
   year         = {2011}
 }
 
+
 @article{proof_processing_Isabelle,
   author  = {Wenzel, Makarius},
   doi     = {10.1016/j.entcs.2012.06.009},
@@ -349,7 +372,6 @@
   url       = {https://doi.org/10.1145/351240.351266},
   year      = {2000}
 }
-
 
 @inproceedings{sledgehammer_judgement_day,
   abstract  = {Sledgehammer, a component of the interactive theorem prover Isabelle, finds proofs in higher-order logic by calling the automated provers for first-order logic E, SPASS and Vampire. This paper is the largest and most detailed empirical evaluation of such a link to date. Our test data consists of 1240 proof goals arising in 7 diverse Isabelle theories, thus representing typical Isabelle proof obligations. We measure the effectiveness of Sledgehammer and many other parameters such as run time and complexity of proofs. A facility for minimizing the number of facts needed to prove a goal is presented and analyzed.},
@@ -380,7 +402,6 @@
   title     = {Standardized crypto-loans on the Cardano blockchain},
   year      = {2021}
 }
-
 @article{tableau_provers,
   address   = {Cambridge, MA, USA},
   author    = {Lawrence C. Paulson},
@@ -393,7 +414,6 @@
   title     = {Generic automatic proof tools},
   year      = {1997}
 }
-
 @inbook{The_Extended_UTXO_Model,
   author = {Chakravarty, Manuel and Chapman, James and MacKenzie, Kenneth and Melkonian, Orestis and Jones, Michael and Wadler, Philip},
   doi    = {10.1007/978-3-030-54455-3_37},
