--- a/languages.tex
+++ b/languages.tex
@@ -1,6 +1,6 @@
 \lstdefinelanguage{Marlowe}{%
   language     = Haskell,
-  morekeywords = {Close, Pay, Assert, If, When, Let},
+  morekeywords = {Close, Pay, Assert, If, When, Let, Case, Constant, Value, Contract, ValueEQ},
 }
 \lstdefinelanguage{Isabelle}{%
   language     = ML,
@@ -22,6 +22,7 @@
     breakatwhitespace=false,         
     language=Haskell,
     breaklines=true,                 
+    upquote=true,
     captionpos=b,                    
     keepspaces=true,                 
     numbers=none,                    
